tests/snapshots/snapshots__list_with_project_filter_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxedo-snapshot.txt  •  4 task DETAIL                           
                                                                                                    
 PROJECTS                  (1)  PRIORITY A  ────────────────────── priority  (A)                    
 ▸ +work             4      1 ▸ (A) Finish Q2 board deck +work @la created   2026-05-01             
   +health           3     (2)  PRIORITY B  ────────────────────── due       2026-05-06  today      
   +finance          2      2   (B) Review pull requests for auth  projects  +work                  
   +home             1      3   (B) Draft hiring rubric for senior contexts  @laptop                
   +learning         1     (1)  NO PRIORITY  ─────────────────────                                  
   +personal         1      4       Migrate analytics to new pipel                                  
   +travel           1                                                                              
                                                                                                    
 CONTEXTS                                                                                           
   @errands          4                                                                              
   @home             4                                                                              
   @laptop           4                                                                              
   @phone            3                                                                              
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 NORMAL   j/k · n new · r reschedule · x done · / searc4 open · 2026-05-06 · tuxedo 2026.7.1-prumo5
